syntax = "proto3";

package file_server;

service FileDownloader {
  rpc DownloadFile(Request) returns (FileResponse);
}

message Request {
  string uri = 1;
}

message FileResponse {
  uint32 status = 1;
  bytes data = 2;
}
